@@ -1,5 +1,7 @@
 package crane.teamservice.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import crane.teamservice.client.UserClient;
 import crane.teamservice.common.exceptions.BadRequestException;
 import crane.teamservice.dto.*;
@@ -11,6 +13,12 @@ import crane.teamservice.exception.TeamNotFoundException;
 import crane.teamservice.repository.TeamMemberRepository;
 import crane.teamservice.repository.TeamRepository;
 import lombok.RequiredArgsConstructor;
+import org.hibernate.annotations.Cache;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
+import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.data.redis.core.ValueOperations;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -27,8 +35,15 @@ public class TeamService {
     private final TeamRepository teamRepository;
     private final TeamMemberRepository teamMemberRepository;
     private final UserClient userClient;
+    private static final String TEAM_LIST_KEY = "teamList";
+    private final ObjectMapper objectMapper;
 
+    private final RedisTemplate<String, String> redisTemplate;
     //팀 생성
+    @Caching(evict = {
+            @CacheEvict(value = "teamById", key = "#result.teamId"),
+            @CacheEvict(value = "teams")
+    })
     @Transactional
     public TeamResponseDto createTeam(TeamRequestDto teamRequestDto){
         Team team = Team.builder()
@@ -42,6 +57,7 @@ public class TeamService {
     }
 
     //팀 조회
+    @Cacheable(value = "teamById", key = "#teamId", cacheManager = "redisCacheManager")
     public TeamResponseDto readTeam(Long teamId){
         Team team = teamRepository.findTeamByTeamId(teamId).orElseThrow(
                 ()-> new TeamNotFoundException("팀을 찾을 수 없습니다."));
@@ -49,14 +65,19 @@ public class TeamService {
     }
 
     //전체 팀 목록 조회
+    // @Cacheable(value = "teams", key = "'allTeams'", cacheManager =  "redisCacheManager") //-> 인덱싱으로 처리
     public List<TeamResponseDto> findTeamList(){
+
         List<Team> teamList = teamRepository.findAll();
 
-        return teamList.stream().map(TeamResponseDto::from)
-                .collect(Collectors.toList());
+        return teamList.stream().map(TeamResponseDto::from).toList();
     }
 
     //팀 멤버 생성
+    @Caching(evict =  {
+            @CacheEvict(value = "teamMemberById", key = "#result.teamMemberId"),
+            @CacheEvict(value = "teamMemberByTeamId", key = "#teamMemberRequestDto.teamId")
+    })
     @Transactional
     public TeamMemberResponseDto createTeamMember(TeamMemberRequestDto teamMemberRequestDto, Long userId) {
         teamRepository.findTeamByTeamId(teamMemberRequestDto.getTeamId()).orElseThrow(
@@ -83,7 +104,8 @@ public class TeamService {
         return TeamMemberResponseDto.from(teamMember);
     }
 
-    // 팀 멤버 조회
+    // 팀 멤버 정보 조회
+    @Cacheable(value = "teamMemberById", key = "#teamMemberId", cacheManager = "redisCacheManager")
     public TeamMemberResponseDto readTeamMember(Long teamMemberId){
         TeamMember teamMember = teamMemberRepository.findByTeamMemberId(teamMemberId).orElseThrow(
                 ()-> new TeamMemberNotFoundException("팀 멤버를 찾을 수 없습니다."));
@@ -91,12 +113,16 @@ public class TeamService {
         return TeamMemberResponseDto.from(teamMember);
     }
 
+    // 팀 멤버 전체 조회
+    @Cacheable(value = "teamMemberByTeamId", key = "#teamId", cacheManager = "redisCacheManager")
+
     public List<TeamMemberResponseDto> readAllTeamMember(Long teamId){
         List<TeamMember> teamMemberList = teamMemberRepository.findByTeamId(teamId);
         return teamMemberList.stream().map(TeamMemberResponseDto::from).toList();
     }
 
-    //팀 수정
+    //팀 정보 수정
+    @CacheEvict(value = "teamById", key = "#teamId")
     @Transactional
     public TeamResponseDto updateTeam(Long teamId, TeamRequestDto teamRequestDto){
         Team team = teamRepository.findTeamByTeamId(teamId).orElseThrow(
@@ -107,6 +133,7 @@ public class TeamService {
     }
 
     //팀 삭제
+    @CacheEvict(value = "teamById", key = "#teamId")
     @Transactional
     public TeamResponseDto deleteTeam(Long teamId, Long userId) {
         Team team = teamRepository.findTeamByTeamId(teamId).orElseThrow(
@@ -122,6 +149,7 @@ public class TeamService {
     }
 
     // 팀 멤버 삭제
+    @CacheEvict(value = "teamMemberById", key = "#teamMemberId")
     @Transactional
     public TeamMemberResponseDto deleteTeamMember(Long teamMemberId){
         TeamMember teamMember = teamMemberRepository.findByTeamMemberId(teamMemberId).orElseThrow(
@@ -132,6 +160,7 @@ public class TeamService {
     }
 
     // 팀 멤버 전체 삭제
+    @CacheEvict(value = "teamMemberByTeamId", key = "#teamId")
     @Transactional
     public List<TeamMemberResponseDto> deleteAllTeamMembers(Long teamId){
         teamRepository.findTeamByTeamId(teamId).orElseThrow(
